Wed Jun 23 14:48:29 1999  Raph Levien  <raph@gimp.org>

	* Makefile.am: Reverted Pablo Saratxaga's changes. I'm not sure
	what the right thing to do is, but hardlinking gtkrc files doesn't
	seem to be it. In any case, it breaks my build, so I'm reverting.

1999-06-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.[ch]: Moved all the private fields of the
	GnomeIconList structure to a private structure in
	gnome-icon-list.c.  Changed all the functions to use this instead.

	* gnome-icon-list.c (gil_button_press): Sanitized for correct
	behavior.  Unselect all icons if no modifier key is pressed.
	(Icon): Now the Icon structure keeps a bit that indicates whether
	it is selected, and another bit for temporary storage of the
	selection.  The preserve_selection list in the icon list structure
	is gone.  Wheee!
	(update_drag_selection): Make use of the selected and tmp_selected
	fields in the Icon structure.
	(gil_icon_to_index): g_assert_not_reached() instead of returning
	zero.

	* gnome-icon-item.c (gnome_icon_text_item_configure): Added some
	more sanity checks.  Make the iti->width be the specified width.
	(ItiPrivate): Moved the private fields of the GnomeIconTextItem
	structure to this new structure.  Replaced the old fields with
	padding to preserve binary compatibility.
	(iti_init): Create the private structure here.
	(iti_update): Changed all the functions to *properly* queue
	updates and then changed iti_update() to update the stuff that is
	needed and then queue a redraw properly.  This is the way canvas
	items should work.
	Improved documentation comments.

	* gnome-icon-item.h: Remove unnecessary #includes.  Improved
	comments a bit.

	* gnome-canvas.c (gnome_canvas_new_aa): Added a loud warning about
	not using the AA canvas until it is debugged.
	(gnome_canvas_item_update): Unset the GNOME_CANVAS_ITEM_NEED_*
	flags here.
	(gnome_canvas_group_update): Call the group's parent class update
	method.
